<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">Aceptar</string>
    <string name="app_name">Radar COVID</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Volver</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_covid_report">Comunica tu positivo Covid</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="com.crashlytics.android.build_id">7a4f3ce8252b4ed4b6b7e639de42a6e8</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="conditions_p10_content">Dirección: Calle de Manuel Cortina, 2, 28010 Madrid\10\10El soporte al USUARIO en caso de incidencias y/o reclamaciones será principalmente online y atendido a la mayor brevedad: contacto@covid19.gob.es</string>
    <string name="conditions_p10_title">10. Información corporativa y contacto</string>
    <string name="conditions_p1_content">Radar COVID es una aplicación que promueve la salud pública mediante un sistema de alerta de contagios por la COVID-19, poniendo a disposición de los USUARIOS (en adelante, individualmente, el “USUARIO”, y conjuntamente los “USUARIOS”), la posibilidad de navegar por la Aplicación, accediendo a los contenidos y servicios de Radar COVID, de acuerdo con las presentes CONDICIONES DE USO.\10\10Radar COVID detecta la intensidad de señales Bluetooth intercambiadas entre dispositivos que tienen esta aplicación activa, mediante el empleo de identificadores aleatorios efímeros, que no guardan relación con la identidad del teléfono móvil empleado o el USUARIO. El dispositivo de cada USUARIO descarga periódicamente las claves Bluetooth de todos los USUARIOS de la aplicación que hayan informado a través de la misma que se les ha diagnosticado COVID-19 (previa acreditación de las autoridades sanitarias), procediendo a determinar si el USUARIO ha establecido contacto de riesgo con alguno de ellos, verificado por las señales Bluetooth intercambiadas. Si es el caso, la aplicación le notifica este hecho, a fin de que pueda para tomar medidas, y contribuir de este modo a evitar que el virus se propague.</string>
    <string name="conditions_p1_title">1. Qué es Radar COVID</string>
    <string name="confirmation_tip_1">Permanece en casa, preferentemente en tu habitación y no compartas el baño</string>
    <string name="confirmation_tip_2">Evita el contacto con otras personas</string>
    <string name="confirmation_tip_3">Usa siempre mascarilla quirúrgica</string>
    <string name="confirmation_tip_4">Lávate las manos frecuentemente</string>
    <string name="confirmation_tip_5">Ante la aparición de algún síntoma (fiebre, tos, dificultad respiratoria) llama a tu centro de salud</string>
    <string name="confirmation_tip_6">Si los síntomas empeoran llama al 112</string>
    <string name="contact_email">piloto.appcovid@economia.gob.es</string>
    <string name="covid_report_code_hint_subtitle">Introduce el código que te han enviado</string>
    <string name="covid_report_code_hint_title">Código de diagnóstico</string>
    <string name="covid_report_code_input_example">ej. 123456789123</string>
    <string name="covid_report_p1">Enviando tu diagnóstico anónimo COVID-19, estás contribuyendo a detener la propagación del virus.</string>
    <string name="covid_report_p2">Gracias por ayudarnos a cuidar a los demás.</string>
    <string name="covid_report_p3">Tu información está segura y será tratada siempre anónimamente</string>
    <string name="covid_report_qr_button">Escanear QR</string>
    <string name="covid_report_send_button">Enviar diagnóstico anónimo</string>
    <string name="covid_report_subtitle">Envía tu diagnóstico COVID positivo</string>
    <string name="covid_report_title">MI DIAGNÓSTICO</string>
    <string name="exposure_detail_acknowledgement_message">Gracias por seguir cuidándote y cuidando a los demás.</string>
    <string name="exposure_detail_infected_p1">Tu diagnostico nos ayuda a proteger a los demás.\10\10Sin revelar tu identidad en ningún momento, hemos comunicado tu diagnóstico a móviles han estado cerca de ti en los últimos días y les enviaremos una alerta para su seguridad.</string>
    <string name="exposure_detail_infected_tips_title">Sigue las siguientes recomendaciones y los consejos de tu centro de salud:</string>
    <string name="exposure_detail_infected_what_to_do_subtitle">Por favor, aíslate durante 14 días.</string>
    <string name="exposure_detail_tip_clinic">Ante la aparición de algún síntoma (fiebre, tos, dificultad respiratoria) llama a tu centro de salud</string>
    <string name="exposure_detail_tip_cough">Al toser o estornudar, tápate la boca o la nariz y usa pañuelos desechables o la parte interior del codo</string>
    <string name="exposure_detail_tip_distance">Mantén la distancia de seguridad de 1,5 metros</string>
    <string name="exposure_detail_tip_mask">Usa siempre mascarilla quirúrgica</string>
    <string name="exposure_detail_tip_rules">Respeta las normas particulares en tu territorio sobre aforos y actividades permitidas</string>
    <string name="exposure_detail_tip_wash_hands">Lávate las manos frecuentemente</string>
    <string name="exposure_detail_tips_title_low">Mantén las medidas de seguridad y distanciamiento social.</string>
    <string name="exposure_detail_what_to_do">¿Qué debo hacer?</string>
    <string name="my_data_conditions">Consulta las condiciones de uso</string>
    <string name="my_data_encription_info">Los datos son guardados en tu teléfono y la conexión con el servidor están encriptados</string>
    <string name="my_data_l1">NO recogemos ningún dato personal (nombre, dirección, edad, teléfono, correo electrónico…)</string>
    <string name="my_data_l2">NO recogemos ningún dato de geolocalización, incluidos los datos del GPS</string>
    <string name="my_data_l3">Por tanto:\10NO podemos determinar tu identidad ni saber las personas con las que has estado</string>
    <string name="my_data_privacy">Consulta la política de privacidad</string>
    <string name="my_data_subtitle">Tu privacidad es lo más importante</string>
    <string name="my_data_title">MIS DATOS</string>
    <string name="poll_completed_p1">Muchas gracias por participar en el piloto de la APP Radar COVID, tu opinión será clave para mejorarla y contribuir a prevenir futuros contagios.</string>
    <string name="poll_completed_p2">¿Te interesaría participar en una entrevista telefónica para conocer más sobre tu experiencia con Radar COVID? Escribe a:</string>
    <string name="poll_completed_p3">Nos pondremos en contacto contigo para fijar el día y la hora que se adapte mejor a tí.</string>
    <string name="poll_completed_phone_attention_message">Contacta con nosotros si tu riesgo de exposición en la aplicación es alto o si tienes cualquier incidencia sobre la aplicación.</string>
    <string name="poll_completed_phone_attention_title">Atención teléfónica</string>
    <string name="poll_completed_t1">Gracias por ayudarnos a mejorar.</string>
    <string name="poll_completed_t2">Un paso más</string>
</resources>