<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/background_covid_report" android:scaleType="fitXY" app:layout_constraintTop_toTopOf="0"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toTopOf="0" style="@style/ScrollVertical">
        <LinearLayout android:orientation="vertical" android:paddingLeft="22dp" android:paddingTop="60dp" android:paddingRight="22dp" android:paddingBottom="22dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="37dp" android:layout_marginBottom="10dp" android:text="@string/my_data_title" app:labelId="MY_DATA_TOP_PLACEHOLDER" style="@style/TitleXSmall"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/my_data_subtitle" app:labelId="MY_DATA_TITLE" style="@style/TitleMedium"/>
            <p002es.gob.radarcovid.common.view.LabelDotTextView android:id="@+id/dottedTextViewL1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/my_data_l1" app:labelId="MY_DATA_BULLET_1"/>
            <p002es.gob.radarcovid.common.view.LabelDotTextView android:id="@+id/dottedTextViewL2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/my_data_l2" app:labelId="MY_DATA_BULLET_2"/>
            <p002es.gob.radarcovid.common.view.LabelDotTextView android:id="@+id/dottedTextViewL3" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/my_data_l3" app:dotVisibility="1" app:labelId="MY_DATA_BULLET_3"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textSize="16sp" android:textColor="@color/black_26" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="11dp" android:text="@string/my_data_encription_info" android:fontFamily="@font/muli_regular" app:labelId="MY_DATA_PARAGRAPH_1"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textSize="16sp" android:textColor="@color/black_28" android:id="@+id/textViewPrivacy" android:paddingTop="13dp" android:paddingBottom="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/my_data_privacy" android:fontFamily="@font/muli_light" app:labelId="MY_DATA_PRIVACY"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textSize="16sp" android:textColor="@color/black_28" android:id="@+id/textViewConditions" android:paddingTop="13dp" android:paddingBottom="13dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="11dp" android:text="@string/my_data_conditions" android:fontFamily="@font/muli_light" app:labelId="MY_DATA_TERMS"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
