<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/background" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/background_covid_report" android:scaleType="fitXY" app:layout_constraintTop_toTopOf="0"/>
    <include android:id="@+id/layoutBackButton" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="0" layout="@layout/layout_back_navigation"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="0dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintTop_toBottomOf="@+id/layoutBackButton" style="@style/ScrollVertical">
        <LinearLayout android:orientation="vertical" android:paddingLeft="22dp" android:paddingRight="22dp" android:paddingBottom="22dp" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content">
            <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="37dp" android:layout_marginBottom="10dp" android:text="@string/covid_report_title" app:labelId="MY_HEALTH_TITLE_PAGE" style="@style/TitleXSmall"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:text="@string/covid_report_subtitle" app:labelId="MY_HEALTH_TITLE" style="@style/TitleMedium"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/covid_report_p1" app:labelId="MY_HEALTH_PARAGRAPH_1" style="@style/TextSmall"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:text="@string/covid_report_p2" app:labelId="MY_HEALTH_PARAGRAPH_2" style="@style/TextSemibold"/>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="36dp" android:text="@string/covid_report_p3" app:labelId="MY_HEALTH_PARAGRAPH_3" style="@style/TextSemibold"/>
            <Button android:id="@+id/buttonQRScan" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/covid_report_qr_button" style="@style/ButtonNormal"/>
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp">
                <p002es.gob.radarcovid.common.view.LabelTextView android:textSize="16sp" android:id="@+id/textViewHintTitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/covid_report_code_hint_title" app:labelId="MY_HEALTH_DIAGNOSTIC_CODE_TITLE" app:layout_constraintEnd_toStartOf="@+id/imageViewCovidReport" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/TitleXSmall"/>
                <p002es.gob.radarcovid.common.view.LabelTextView android:textColor="@color/black" android:id="@+id/textViewHintSubtitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="@string/covid_report_code_hint_subtitle" app:labelId="MY_HEALTH_DIAGNOSTIC_CODE_CONTENT" app:layout_constraintEnd_toStartOf="@+id/imageViewCovidReport" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textViewHintTitle" style="@style/TextSmall"/>
                <ImageView android:id="@+id/imageViewCovidReport" android:layout_width="166dp" android:layout_height="161dp" android:src="@drawable/img_covid_report" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="0"/>
                <p002es.gob.radarcovid.common.view.CodeEditText android:id="@+id/codeEditText" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="150dp" app:layout_constraintTop_toTopOf="0"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <p002es.gob.radarcovid.common.view.LabelTextView android:textSize="13sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="38dp" android:text="@string/covid_report_code_input_example" android:fontFamily="@font/muli_italic" app:labelId="MY_HEALTH_DIAGNOSTIC_CODE_EXAMPLE"/>
            <p002es.gob.radarcovid.common.view.LabelButton android:enabled="false" android:id="@+id/buttonSend" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/covid_report_send_button" app:labelId="MY_HEALTH_DIAGNOSTIC_CODE_SEND_BUTTON" style="@style/ButtonNormal"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
